<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schoolnumber"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_schoolnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="9"
            android:padding="10dp" />
        <TextView
            android:id="@+id/tv_numberLen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_discord" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="30"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_passwordlength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_discord" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordconfirm"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_passwordconfirm"
            android:layout_width="fill_parent"
            android:maxLength="30"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_discord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_discord" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_scEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="\u0040catholic.ac.kr"
                android:textSize="15dp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <EditText
                android:id="@+id/et_id"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLength="20"
                android:padding="10dp"/>
            <Button
                android:id="@+id/btn_doublecheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_doublecheck"
                android:textColor="@color/white" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_idLen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_discord" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btn_previous"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"
            android:text="@string/btn_previous"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"
            android:text="@string/btn_next"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>