<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_arrow_back_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/spinner1"
            android:spinnerMode="dialog"
            android:prompt="@string/grade" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/spinner2"
            android:spinnerMode="dialog"
            android:prompt="@string/semester" />
        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:spinnerMode="dialog"
            android:prompt="@string/subject" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/img1"
            android:scaleType="center"
            android:layout_width="200dp"
            android:layout_weight="1"
            android:background="@drawable/roundrect"
            android:src="@drawable/ic_baseline_photo_camera_back_24"
            android:layout_height="140dp"/>
        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/img2"
            android:scaleType="center"
            android:layout_width="200dp"
            android:layout_weight="1"
            android:background="@drawable/roundrect"
            android:src="@drawable/ic_baseline_photo_camera_back_24"
            android:layout_height="140dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/content_et"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#eeeeee"
        android:hint="내용을 입력하세요."
        />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0F84FF"
        android:text="등록하기"
        android:textColor="#FFFFFF" />
</LinearLayout>